force-app/main/default/objects/IssueDetails__c/fields/CopyDetails__c.field-meta.xml
<CustomField>
    <fullName>CopyDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CopyDetails</label>
    <referenceTo>CopyDetails__c</referenceTo>
    <relationshipLabel>IssueDetailss</relationshipLabel>
    <relationshipName>IssueDetailss</relationshipName>
    <type>Lookup</type>
</CustomField>