force-app/main/default/objects/IssueDetails__c/validationRules/isIssued_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>isIssued_rules</fullName>
    <active>true</active>
    <errorConditionFormula>Member__r.isIssued__c == TRUE</errorConditionFormula>
    <errorDisplayField>Member__c</errorDisplayField>
    <errorMessage>Record should not be saved, if Related Member&apos;s isIssued Field is Checked.</errorMessage>
</ValidationRule>