force-app/main/default/objects/IssueDetails__c/validationRules/IssueDate_rules.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueDate_rules</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(IssueDate__c ==  TODAY())</errorConditionFormula>
    <errorDisplayField>IssueDate__c</errorDisplayField>
    <errorMessage>IssueDate must be current date only.</errorMessage>
</ValidationRule>