force-app/main/default/objects/IssueDetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Member__c</columns>
    <columns>CopyDetails__c</columns>
    <columns>IssueDate__c</columns>
    <columns>DueDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>